fixed som bug with the overflow

--- a/src/components/ImageGrid/ImageGrid.module.css
+++ b/src/components/ImageGrid/ImageGrid.module.css
@@ -1,5 +1,6 @@
 .imageGrid {
   width: 100vw;
+  height: min-content;
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
